--- a/index.html
+++ b/index.html
@@ -6705,7 +6705,7 @@ window.addEventListener('load', function() {
                     <ul>
                         <li class="b-header__category-bar-text" data-value="virtual-dressing-room">
                             <a class="b-header__category-bar-text-sliding b-header__category-new b-header__clickable" href="virtual-dressing-room/?from=header">
-                                VIRTUAL DRESSING ROOM (NEW!)                            </a>
+                                ZALORA REWARDS                            </a>
                         </li>
                     </ul>
                 </div>
