--- a/index.html
+++ b/index.html
@@ -9078,7 +9078,7 @@ View All                                                                </li>
                     <ul>
                         <li class="b-header__category-bar-text" data-value="virtual-dressing-room">
                             <a class="b-header__category-bar-text-sliding b-header__category-new b-header__clickable" href="https://www.zalora.sg/virtual-dressing-room/?from=header">
-                                VIRTUAL DRESSING ROOM (NEW!)                            </a>
+                                ZALORA REWARDS                            </a>
                         </li>
                     </ul>
                 </div>
