--- a/index.html
+++ b/index.html
@@ -6733,12 +6733,18 @@ window.addEventListener('load', function() {
 <div class="ct-widget" data-widget-id="14578" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/account-overview/14578"></div>
                 <td>
                         <div role="header" aria-level="1" class="header ct-bar-blue" font-family="sans-serif;" style="background-color: rgb(0, 0, 0);">
-                                <text id="header-text" class="ct-header-text-color ng-binding" style="color: rgb(255, 255, 255);">&nbsp;&nbsp  USE YOUR ZALORA REWARDS POINTS</h6>
+                                <text id="header-text" class="ct-header-text-color ng-binding" style="color: rgb(255, 255, 255);">&nbsp;&nbsp  EARN ZALORA REWARDS POINTS</h6>
                         </div>
                 </td>
 <div class="ct-widget" data-widget-id="14584" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14584"></div>
 <div class="ct-widget" data-widget-id="14550" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14550"></div>
-
+	
+                <td>
+                        <div role="header" aria-level="1" class="header ct-bar-blue" font-family="sans-serif;" style="background-color: rgb(0, 0, 0);">
+                                <text id="header-text" class="ct-header-text-color ng-binding" style="color: rgb(255, 255, 255);">&nbsp;&nbsp  USE YOUR ZALORA REWARDS POINTS</h6>
+                        </div>
+                </td>	
+<div class="ct-widget" data-widget-id="14692" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/reward-list/14692"></div>
 
 <td>
                         <div role="header" aria-level="2" class="collapsible" style="background-color: rgb(6,6,7);">
@@ -6746,6 +6752,29 @@ window.addEventListener('load', function() {
                         </div>
                 </td>
 <div class="ct-widget" data-widget-id="13102" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-history/13102"></div>
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script> 
+
+	<td>
+                        <div role="header" aria-level="2" class="collapsible" style="background-color: rgb(6,6,7);">
+                                <text id="header-text" font-family="AvenirLTStd-Heavy,Arial,Helvetica,sans-serif;" class="ct-header-text-color ng-binding" align="center" style="color: rgb(255, 255, 255);">&nbsp;&nbsp  CLICK TO VIEW YOUR ZALORA REWARDS BURN HISTORY</h6>
+                        </div>
+                </td>
+<div class="ct-widget" data-widget-id="13108" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/reward-history/13108"></div>
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
