--- a/index.html
+++ b/index.html
@@ -6770,13 +6770,13 @@ for (i = 0; i < coll.length; i++) {
 </script> 
 <br>
 	<td>
-                        <div role="header" aria-level="2" class="collapsible" style="background-color: rgb(6,6,7);">
+                        <div role="header" aria-level="2" class="collapsible1" style="background-color: rgb(6,6,7);">
                                 <text id="header-text" font-family="AvenirLTStd-Heavy,Arial,Helvetica,sans-serif;" class="ct-header-text-color ng-binding" align="center" style="color: rgb(255, 255, 255);">&nbsp;&nbsp  CLICK TO VIEW YOUR ZALORA REWARDS BURN HISTORY</h6>
                         </div>
                 </td>
 <div class="ct-widget" data-widget-id="13108" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/reward-history/13108"></div>
 <script>
-var coll = document.getElementsByClassName("collapsible");
+var coll = document.getElementsByClassName("collapsible1");
 var i;
 
 for (i = 0; i < coll.length; i++) {
